<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".OrderActivity">

        <!-- Judul Halaman -->
        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/judulHalActOrd"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"/>

        <!-- Input Nama Makanan -->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_makanan"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/etFoodName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_pesanan"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Input Jumlah Porsi -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_sajian"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/etServings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_sajian_qty"
            android:inputType="number"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Input Jumlah Porsi -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ket_input_nama"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_customer_name"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>


        <!-- Input Catatan Tambahan -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ket_catatan"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>
        <EditText
            android:id="@+id/etNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_catatan"
            android:padding="12dp"
            android:layout_marginBottom="16dp"/>

        <!-- Tombol Order -->
        <Button
            android:id="@+id/btnPesanSekarang"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pesan_sekarang"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:padding="12dp"/>

        <Button
            android:id="@+id/btnDaftarMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daftar_menu"
            android:layout_gravity="center_horizontal"
            android:textColor="@android:color/white"
            android:padding="12dp"/>

</LinearLayout>